prevent app abbr from overflowing/wrapping

--- a/src/header/css/header-apps.pcss
+++ b/src/header/css/header-apps.pcss
@@ -270,6 +270,7 @@ html[dir="rtl"] .dropdown-menu.dropdown-right {
 	text-shadow: 0 1px 8px var(--mono-40);
 	transform: translate3d(0, 0, 0);
 	width: 48px;
+	white-space: nowrap;
 }
 
 .esri-header-apps .default-svg-fill {
